--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'datepicker' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
+
   target 'datepickerTests' do
     inherit! :complete
     # Pods for testing
