--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.6.0",
+    "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2"
   },
